--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^1.0.1
   google_sign_in: ^5.0.0
   shared_preferences: ^2.0.15
+  geolocator: ^9.0.1
+  google_maps_flutter: ^2.1.8
 
 
 dev_dependencies:
